--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="author" content="'Tis I! (Christos Hailis)" />
         <meta name="keywords" content="university, decisions, us university, varsity, uk university, college, personal website" />
         <link rel="icon" type="image/x-icon"  href="images/uni-favicon.ico"/> <!--not working-->
-        <link rel="stylesheet" href="styles/unistyle.css"/>
+        <link rel="stylesheet" href="unistyle.css"/>
         <script src="scripts/uniscript.js" defer> </script>
     </head>
     <body style="background-color:azure;margin: 0px;">
